--- a/master.css
+++ b/master.css
@@ -1,12 +1,17 @@
+*{
+    margin: 0;
+}
 
 body{
     background-color: #333;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    display: grid;
 }
 
 button{
     margin: auto;
+    align-self: center;
     width: 50px;
     height: 50px;
 }
